# gcj_end

2022_1C/: CMakeLists.txt  debug_hack.hpp  task1.cpp
2022_1C/.cache/clangd/index/: debug_hack.hpp.1BC2640624C7631B.idx  task1.cpp.47C8E5ECD37C9B37.idx  task1.cpp.9973445271BA6714.idx  task2.cpp.2C2BC5C73A0FCDBA.idx  task3.cpp.33A544E555D3E409.idx  task4.cpp.F7FB2975CF82B6B1.idx  task5.cpp.40216401EF4A332F.idx
RoundA/: task1.cpp  task1.txt  task1_actual.txt  task2.cpp  task2.txt  task3.cpp  task4.cpp  task5.cpp
RoundA/.cache/clangd/index/: debug_hack.hpp.9A4F06E29CF467A3.idx  debug_hack.hpp.DA27A08D4BFBFC74.idx  task1.cpp.5EFE41290261C506.idx  task2.cpp.190FF899F61B1604.idx  task3.cpp.F743A9F254F709D6.idx  task4.cpp.2F310FA5F8F4472D.idx  task5.cpp.000A1839541F60B3.idx
RoundA_JS/: index.js  index.ts  package-lock.json  package.json  task1.js  task2.js  task3.js  task3.ts  task3_2.js  task3_2.ts
RoundB/: task1.cpp  task2.cpp  task2_actual.txt  task3.cpp  task4.cpp
RoundB/.cache/clangd/index/: debug_hack.hpp.4E4908A73536A636.idx  task1.cpp.BF1F1AC3C287D410.idx  task2.cpp.5F0F9745A64FB9DD.idx  task3.cpp.018CE2F18AD0F158.idx  task4.cpp.86E826FB4E190CCA.idx  task5.cpp.F41ADEB478417B9A.idx
bp/: CMakeLists.txt  run_cmake.sh
bp/include/: debug_hack.hpp
ts/: index.js  index.ts  package-lock.json  package.json  token.ts  tree.js  tree.ts
